[metadata]
name = game_lists_steam_server
version = 0.0.3
description = simple server for receiving and processing data from steam
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikohonu/game_lists_steam_server
author = Niko Honu
author_email = nikohonu@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = game_lists_steam_server
install_requires =
    flask
    steam
    peewee
    APScheduler
python_requires = >=3.10.1

[options.entry_points]
console_scripts =
    glss = game_lists_steam_server.__main__:main
